--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ notebooks/.ipynb_checkpoints
 notebooks/private_twitter_credentials.py
 notebooks/keys.py
 notebooks/__pycache__
+images/network-server-cable-end.jpg
