--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ notebooks/.ipynb_checkpoints
 notebooks/private_twitter_credentials.py
 notebooks/keys.py
 notebooks/__pycache__
+notebooks/obtain_requirements.ipynb
 images/network-server-cable-end.jpg
